Alignment issues are fixed in sub tab

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,6 +1,5 @@
 #home-header {
   position: initial !important;
-  /* margin: clamp(10px,10vh,20px); */
 }
 
 div p {
@@ -18,6 +17,7 @@ div p {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
+  margin-top: -5vh;
 }
 
 #home-leaderboard-button {
@@ -29,7 +29,7 @@ div p {
   margin-right: 2vw;
 }
 
-#sub-tab {
+#sub-tabs {
   text-transform: none;
   font-family: BalooRegular;
   font-size: var(--text-size);
@@ -43,11 +43,21 @@ div p {
   color: white;
 }
 
-.sub-tab {
+.MuiTabs-root {
+  min-height: fit-content !important;
+}
+
+.app-bar {
   border-radius: 10vh;
   background-color: #CCCCCC !important;
   box-shadow: none !important;
   width: fit-content !important;
   margin: auto !important;
   position: static !important;
+}
+
+#home-page-bottom {
+  position: fixed;
+  width: 100%;
+  bottom: 2vh;
 }
